--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button class="btn btn-default" onclick="handleProduct(false,'phone')" ><i class="fas fa-minus" ></i></button>
+                           <input id ="phoneCount" type="text" class="form-control text-center" value="1">
+                           <button class="btn btn-default" onclick="handleProduct(true,'phone')"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5>$ <span id="phonePrice">1219</span> </h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -38,17 +38,17 @@
                <div class="cart-item">
                   <div class="row">
                      <div class="col-md-7 center-item mx-auto">
-                        <img src="images/product-2.png" alt="">
+                        <img src="imsages/product-2.png" alt="">
                         <h5>iPhone 11 Silicone Case - Black</h5>
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button  class="btn btn-default" onclick=" handleProduct(false,'case')"><i class="fas fa-minus"></i></button>
+                           <input type="text" class="form-control text-center" value="1" id="caseCount">
+                           <button onclick="handleProduct(true,'case')" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$59</h5>
+                        <h5 id="casePrice">$59</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -64,19 +64,20 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5 id="subTotal">$1,278</h5>
+                        <h5 id="taxAmount">$0</h5>
+                        <h5 id="netAmount">$1,278</h5>
                      </div>
                   </div>
                </div>
-               <div class="col-md-12 pt-4 pb-4">
+               <div class="col-md-12 pt-4 pb-4 ">
                   <button type="button" class="btn btn-success check-out">Check Out</button>
                </div>
             </div>
          </div>
       </div>
    </section>
+   <script src="script.js"></script>
 </body>
 
 </html>
